--- a/dynamic-templates/task1/app/templates/inflation.html
+++ b/dynamic-templates/task1/app/templates/inflation.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>{% load static %}
+<!DOCTYPE html>
+{% load static %}
+{% load heatmap %}
 <html>
   <head>
     <meta charset="UTF-8">
@@ -7,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" href="django/dynamic-templates/task1/app/templates/heatmap.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,7 +20,31 @@
       <div class="row">
         <h1 class="col s12">Инфляция в России</h1>
         <ul class="col s12 m8">
-        
+          <!--<li> 1% </li>-->
+          <!--<li> 2% </li>-->
+
+          <table>
+            <thead>
+            {% for headrow in inflation|slice:":1" %}
+            {% for column_head in headrow %}
+            <th>{{ column_head }}</th>
+            {% endfor %}
+            {% endfor %}
+            </thead>
+            <tbody>
+            {% for row in inflation|slice:"1:" %}
+            <tr>
+              {% for cell in row %}
+              {% if not forloop.last and not forloop.first  %}
+              <td style="background-color:{{cell|heatmap}}"> {{cell|default:"-"}} </td>
+              {% else %}
+              <td> {{cell|default:"-"}} </td>
+              {% endif %}
+              {% endfor%}
+            </tr>
+            {% endfor %}
+            </tbody>
+          </table>
         <!-- Ваша логика -->
 
         </ul>
