--- a/databases_2/orm_query/templates/articles/news.html
+++ b/databases_2/orm_query/templates/articles/news.html
@@ -16,6 +16,9 @@
         {% for scope in article.scopes.all %}
           <span class="badge {% if scope.is_main %}badge-primary{% else %}badge-secondary{% endif %}">{{ scope.topic }}</span>
         {% endfor %}
+        <span>{{article.author}}</span>
+        <br>
+        <span>{{article.genre}}</span>
       </div>
     </div>
   </div>
