--- a/site-form-works/review/templates/app/product_detail.html
+++ b/site-form-works/review/templates/app/product_detail.html
@@ -11,7 +11,7 @@
         {% endfor %}
     </ul>
     {% if is_review_exist %}
-        <p>Обзор от вас уже есть</p>
+        <p style="color:red">Обзор от вас уже есть</p>
     {% else %}
         <p>Можете добавить обзор</p>
     {% endif %}
