--- a/site-personalization/paid_content/templates/article.html
+++ b/site-personalization/paid_content/templates/article.html
@@ -6,7 +6,8 @@
 {% block content %}
     <div class="container">
         <div class="header">
-            <h3>Заголовок статьи</h3>
+            <h3>{{ article_title }}</h3>
+            <p>{{ article_text }}</p>
         </div>
     </div>
 {% endblock %}
