--- a/site-personalization/auth_and_reg_users/templates/signup.html
+++ b/site-personalization/auth_and_reg_users/templates/signup.html
@@ -7,5 +7,16 @@
     <div class="container">
         <div class="header"></div>
         <h2>Регистрация</h2>
+<!--        <p>{{ form }}</p>-->
+
+            <form action="" method="POST">
+                             {% csrf_token %}
+
+            {% for field in form %}
+            <p>{{ field.label_tag }}</p> {{ field }}
+            {{ field.errors }}
+            {% endfor %}
+            <input type="submit" value="Зарегистрироваться"/>
+        </form>
     </div>
 {% endblock %}
