--- a/site-personalization/paid_content/templates/articles.html
+++ b/site-personalization/paid_content/templates/articles.html
@@ -9,9 +9,10 @@
             <h1>Список статей</h1>
         </div>
         <div class="articles">
-            <h3>Статья 1</h3>
-            <h3>Статья 2</h3>
-            <h3>Статья 3</h3>
+            {% for article in articles %}
+<!--            <p></p>-->
+            <h3><a href="{{ article.id }}">{{ article.title }}</a></h3>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
