--- a/site-personalization/paid_content/templates/blocked_content.html
+++ b/site-personalization/paid_content/templates/blocked_content.html
@@ -8,6 +8,8 @@
         <div class="header">
             <h3> Это платный материал </h3>
             <p> Пожалуйста, оплатите подписку, чтобы получить доступ к данному материалу </p>
+        <p> {{user.username}} </p>
         </div>
+
     </div>
 {% endblock %}
